updated curves with rate Fs simulation, results a little better that rate Rs, probably experimental error

--- a/freedv_low/equaliser_div_ber.tex
+++ b/freedv_low/equaliser_div_ber.tex
@@ -1,30 +1,30 @@
 % Title: gl2ps_renderer figure
 % Creator: GL2PS 1.4.2, (C) 1999-2020 C. Geuzaine
 % For: Octave
-% CreationDate: Sat Sep 23 07:38:13 2023
+% CreationDate: Tue Sep 26 12:04:55 2023
 \setlength{\unitlength}{1pt}
 \begin{picture}(0,0)
 \includegraphics[scale=1]{equaliser_div_ber-inc}
 \end{picture}%
 \begin{picture}(350,350)(0,0)
-\fontsize{7}{0}\selectfont\put(45.5,33.024){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{0}}}}
-\fontsize{7}{0}\selectfont\put(99.75,33.024){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{2}}}}
-\fontsize{7}{0}\selectfont\put(154,33.024){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{4}}}}
-\fontsize{7}{0}\selectfont\put(208.25,33.024){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{6}}}}
-\fontsize{7}{0}\selectfont\put(262.5,33.024){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{8}}}}
-\fontsize{7}{0}\selectfont\put(316.75,33.024){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{10}}}}
-\fontsize{7}{0}\selectfont\put(41.8492,38.5){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{$10^{-3}$}}}}
-\fontsize{7}{0}\selectfont\put(41.8492,144.188){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{$10^{-2}$}}}}
-\fontsize{7}{0}\selectfont\put(41.8492,249.877){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{$10^{-1}$}}}}
-\fontsize{8}{0}\selectfont\put(181.125,21.0241){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{Eb/No (dB)}}}}
-\fontsize{8}{0}\selectfont\put(7.8492,181.125){\rotatebox{90}{\makebox(0,0)[b]{\textcolor[rgb]{0.15,0.15,0.15}{{BER}}}}}
-\fontsize{6}{0}\selectfont\put(81.4843,142.731){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{AWGN theory}}}}
-\fontsize{6}{0}\selectfont\put(81.4843,131.233){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{AWGN lin2ls}}}}
-\fontsize{6}{0}\selectfont\put(81.4843,119.734){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{MPP theory}}}}
-\fontsize{6}{0}\selectfont\put(81.4843,108.674){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{MPP mean12 MPP}}}}
-\fontsize{6}{0}\selectfont\put(81.4843,98.5503){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{MPP lin2ls}}}}
-\fontsize{6}{0}\selectfont\put(81.4843,87.9895){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{MPP div2 MRC}}}}
-\fontsize{6}{0}\selectfont\put(81.4843,76.9913){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{MPP sim div2 MRC 1.6s}}}}
-\fontsize{6}{0}\selectfont\put(81.4843,65.993){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{MPP sim div2 MRC 3.2s}}}}
-\fontsize{6}{0}\selectfont\put(81.4843,54.4948){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{operating point}}}}
+\fontsize{7}{0}\selectfont\put(45.5,33.0288){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{0}}}}
+\fontsize{7}{0}\selectfont\put(99.75,33.0288){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{2}}}}
+\fontsize{7}{0}\selectfont\put(154,33.0288){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{4}}}}
+\fontsize{7}{0}\selectfont\put(208.25,33.0288){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{6}}}}
+\fontsize{7}{0}\selectfont\put(262.5,33.0288){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{8}}}}
+\fontsize{7}{0}\selectfont\put(316.75,33.0288){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{10}}}}
+\fontsize{7}{0}\selectfont\put(41.8524,38.5){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{$10^{-3}$}}}}
+\fontsize{7}{0}\selectfont\put(41.8524,144.188){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{$10^{-2}$}}}}
+\fontsize{7}{0}\selectfont\put(41.8524,249.877){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{$10^{-1}$}}}}
+\fontsize{8}{0}\selectfont\put(181.125,21.0288){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{Eb/No (dB)}}}}
+\fontsize{8}{0}\selectfont\put(7.8524,181.125){\rotatebox{90}{\makebox(0,0)[b]{\textcolor[rgb]{0.15,0.15,0.15}{{BER}}}}}
+\fontsize{6}{0}\selectfont\put(81.5158,140.894){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{AWGN theory}}}}
+\fontsize{6}{0}\selectfont\put(81.5158,129.393){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{AWGN lin2ls}}}}
+\fontsize{6}{0}\selectfont\put(81.5158,117.891){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{MPP theory}}}}
+\fontsize{6}{0}\selectfont\put(81.5158,106.826){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{MPP mean12 MPP}}}}
+\fontsize{6}{0}\selectfont\put(81.5158,96.6998){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{MPP lin2ls}}}}
+\fontsize{6}{0}\selectfont\put(81.5158,86.1355){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{MPP div2 MRC}}}}
+\fontsize{6}{0}\selectfont\put(81.5158,75.1338){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{MPP sim div2 MRC 1.6s}}}}
+\fontsize{6}{0}\selectfont\put(81.5158,64.132){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{MPP sim div2 MRC 3.2s}}}}
+\fontsize{6}{0}\selectfont\put(81.5158,53.5677){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{link closes}}}}
 \end{picture}
