--- a/freedv_low/interpolator.tex
+++ b/freedv_low/interpolator.tex
@@ -1,16 +1,18 @@
 % Title: gl2ps_renderer figure
 % Creator: GL2PS 1.4.2, (C) 1999-2020 C. Geuzaine
 % For: Octave
-% CreationDate: Tue Sep 26 17:24:28 2023
+% CreationDate: Thu Sep 28 07:47:23 2023
 \setlength{\unitlength}{1pt}
 \begin{picture}(0,0)
 \includegraphics[scale=1]{interpolator-inc}
 \end{picture}%
 \begin{picture}(300,300)(0,0)
 \fontsize{10}{0}\selectfont\put(39,26){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{0}}}}
-\fontsize{10}{0}\selectfont\put(111.747,26){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{5}}}}
-\fontsize{10}{0}\selectfont\put(184.494,26){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{10}}}}
-\fontsize{10}{0}\selectfont\put(257.242,26){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{15}}}}
+\fontsize{10}{0}\selectfont\put(80.5921,26){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{2}}}}
+\fontsize{10}{0}\selectfont\put(122.184,26){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{4}}}}
+\fontsize{10}{0}\selectfont\put(163.776,26){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{6}}}}
+\fontsize{10}{0}\selectfont\put(205.369,26){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{8}}}}
+\fontsize{10}{0}\selectfont\put(246.961,26){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{10}}}}
 \fontsize{10}{0}\selectfont\put(33.8051,33.7995){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-2}}}}
 \fontsize{10}{0}\selectfont\put(33.8051,94.7246){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-1}}}}
 \fontsize{10}{0}\selectfont\put(33.8051,155.65){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{0}}}}
@@ -18,7 +20,7 @@
 \fontsize{10}{0}\selectfont\put(33.8051,277.5){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{2}}}}
 \fontsize{11}{0}\selectfont\put(155.25,12){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{time (s)}}}}
 \fontsize{11}{0}\selectfont\put(19.8051,155.65){\rotatebox{90}{\makebox(0,0)[b]{\textcolor[rgb]{0.15,0.15,0.15}{{real}}}}}
-\fontsize{9}{0}\selectfont\put(196.495,261.12){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{channel Hn}}}}
+\fontsize{9}{0}\selectfont\put(196.495,261.12){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{channel H}}}}
 \fontsize{9}{0}\selectfont\put(196.495,247.743){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{pilots}}}}
 \fontsize{9}{0}\selectfont\put(196.495,234.366){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{lin2 channel est}}}}
 \end{picture}
